fix overlapping img bug

--- a/css/article.css
+++ b/css/article.css
@@ -1,5 +1,6 @@
 .blog > h2, h3, h4 {
   font-weight: bold;
+  margin-top: 20px;
 }
 
 .blog > h2, h3 {
@@ -23,7 +24,7 @@
   font-weight: bold;
 }
 
-#row-of-cats {
+.reduce-img {
   height: calc(60%);
   width: calc(60%);
 }
